--- a/Tournamenter_WinFormsApp/Tournamenter_WinFormsApp.csproj
+++ b/Tournamenter_WinFormsApp/Tournamenter_WinFormsApp.csproj
@@ -35,6 +35,7 @@
     <Reference Include="ComponentFactory.Krypton.Toolkit, Version=4.4.0.0, Culture=neutral, PublicKeyToken=a87e673e9ecb6e8e" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Design" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -59,11 +60,11 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RankingCtrl.cs">
+    <Compile Include="VsCtrl.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="RankingCtrl.Designer.cs">
-      <DependentUpon>RankingCtrl.cs</DependentUpon>
+    <Compile Include="VsCtrl.Designer.cs">
+      <DependentUpon>VsCtrl.cs</DependentUpon>
     </Compile>
     <Compile Include="RoundCtrl.cs">
       <SubType>UserControl</SubType>
@@ -73,6 +74,7 @@
     </Compile>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="PlayerPositionCtrl.resx">
       <DependentUpon>PlayerPositionCtrl.cs</DependentUpon>
@@ -86,8 +88,8 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="RankingCtrl.resx">
-      <DependentUpon>RankingCtrl.cs</DependentUpon>
+    <EmbeddedResource Include="VsCtrl.resx">
+      <DependentUpon>VsCtrl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="RoundCtrl.resx">
       <DependentUpon>RoundCtrl.cs</DependentUpon>
