--- a/Logic/Logic.csproj
+++ b/Logic/Logic.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Match.cs" />
     <Compile Include="MatchSettings.cs" />
     <Compile Include="Player.cs" />
+    <Compile Include="PlayerList.cs" />
     <Compile Include="PlayerStance.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Round.cs" />
