--- a/Tournamenter_WinFormsApp/Tournamenter_WinFormsApp.csproj
+++ b/Tournamenter_WinFormsApp/Tournamenter_WinFormsApp.csproj
@@ -52,6 +52,12 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="PlayerList.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PlayerList.Designer.cs">
+      <DependentUpon>PlayerList.cs</DependentUpon>
+    </Compile>
     <Compile Include="PlayerPositionCtrl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -74,6 +80,10 @@
     </Compile>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PlayerList.resx">
+      <DependentUpon>PlayerList.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="PlayerPositionCtrl.resx">
