--- a/Tournamenter_WinFormsApp/Tournamenter_WinFormsApp.csproj
+++ b/Tournamenter_WinFormsApp/Tournamenter_WinFormsApp.csproj
@@ -52,11 +52,11 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="PlayerList.cs">
+    <Compile Include="PlayerListFrm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="PlayerList.Designer.cs">
-      <DependentUpon>PlayerList.cs</DependentUpon>
+    <Compile Include="PlayerListFrm.Designer.cs">
+      <DependentUpon>PlayerListFrm.cs</DependentUpon>
     </Compile>
     <Compile Include="PlayerPositionCtrl.cs">
       <SubType>UserControl</SubType>
@@ -82,8 +82,8 @@
       <DependentUpon>MainForm.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="PlayerList.resx">
-      <DependentUpon>PlayerList.cs</DependentUpon>
+    <EmbeddedResource Include="PlayerListFrm.resx">
+      <DependentUpon>PlayerListFrm.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="PlayerPositionCtrl.resx">
