--- a/Tournamenter_WinFormsApp/Tournamenter_WinFormsApp.csproj
+++ b/Tournamenter_WinFormsApp/Tournamenter_WinFormsApp.csproj
@@ -52,6 +52,12 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="MatchSettingsFrm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MatchSettingsFrm.Designer.cs">
+      <DependentUpon>MatchSettingsFrm.cs</DependentUpon>
+    </Compile>
     <Compile Include="PlayerListFrm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -80,6 +86,10 @@
     </Compile>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MatchSettingsFrm.resx">
+      <DependentUpon>MatchSettingsFrm.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="PlayerListFrm.resx">
